--- a/Ceylangiyim.WebUI/appsettings.Development.json
+++ b/Ceylangiyim.WebUI/appsettings.Development.json
@@ -4,8 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "ConnectionStrings": {
-    "DbConnection": "Server=LAPTOP-EMJSQFU7\\SQLEXPRESS;Database=CeylangiyimDb;Trusted_Connection=true;TrustServerCertificate=True;"
   }
-}
+  //"ConnectionStrings": {
+  //  "DbConnection": "Server=LAPTOP-EMJSQFU7\\SQLEXPRESS;Database=CeylangiyimDb;Trusted_Connection=true;TrustServerCertificate=True;"
+  //}
+} 
